--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon tabComplaints.js"
+    "start": "node tabComplaints.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
   "dependencies": {
     "googleapis": "^144.0.0",
     "moment-timezone": "^0.5.46",
+    "nodemailer": "^6.9.16",
     "xlsx": "^0.18.5"
   }
 }
